--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,6 @@
 [deps]
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 IJulia = "7073ff75-c697-5162-941a-fcdaad2a7d2a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
